# rscms

./: .env.example  .gitignore  Cargo.toml  README.md  README_cn.md
api/src/: main.rs
auth/src/: main.rs
db/: docker-compose.yml
db/docker-entrypoint-initdb.d/: admins.js
db/migrations/: 001_create_table.sql  001_create_users_table.sql
migrations/: 001_create_users_table.sql
src/: main.rs
src/api/: mod.rs
src/config/: auth.rs  mod.rs
src/db/: mod.rs
src/handler/: auth.rs  mod.rs
src/handlers/: app.rs  article.rs  auth.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: app.rs  article.rs  mod.rs
src/route/: auth.rs  index.rs
src/utils/: email.rs  mod.rs
